--- a/daemonset.yaml
+++ b/daemonset.yaml
@@ -1,37 +1,42 @@
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
-  name: longhorn-nfs-installation
+  name: longhorn-iscsi-nfs-install
   labels:
-    app: longhorn-nfs-installation
-  annotations:
-    # command: &cmd OS=$(grep "ID_LIKE" /etc/os-release | cut -d '=' -f 2); if [[ "${OS}" == *"debian"* ]]; then sudo apt-get update -q -y && sudo apt-get install -q -y nfs-common; elif [[ "${OS}" == *"suse"* ]]; then sudo zypper --gpg-auto-import-keys -q refresh && sudo zypper --gpg-auto-import-keys -q install -y nfs-client; else sudo yum makecache -q -y && sudo yum --setopt=tsflags=noscripts install -q -y nfs-utils; fi && if [ $? -eq 0 ]; then echo "nfs install successfully"; else echo "nfs install failed error code $?"; fi
+    app: longhorn-iscsi-nfs-install
 spec:
   selector:
     matchLabels:
-      app: longhorn-nfs-installation
+      app: longhorn-iscsi-nfs-install
   template:
     metadata:
       labels:
-        app: longhorn-nfs-installation
+        app: longhorn-iscsi-nfs-install
     spec:
       hostNetwork: true
       hostPID: true
-      containers:
-      - name: nfs-installation
-        # command:
-        #   - nsenter
-        #   - --mount=/proc/1/ns/mnt
-        #   - --
-        #   - bash
-        #   - -c
-        #   - *cmd
+      initContainers:
+      - name: longhorn-iscsi-nfs-install
         image: docker.io/mddamato/longhorn-iscsi-nfs-utils:v0
         imagePullPolicy: Always
         securityContext:
           privileged: true
-      # containers:
-      # - name: sleep
-      #   image: k8s.gcr.io/pause:3.1
-  updateStrategy:
-    type: RollingUpdate
+        volumeMounts:
+          - mountPath: /mount
+            name: kubeconfig
+          - mountPath: /etc/yum.repos.d
+            name: yum
+      containers:
+      - name: sleep
+        image: k8s.gcr.io/pause:3.1
+      volumes:
+        - name: kubeconfig
+          hostPath:
+            path: /var/lib/rancher/hostMount/longhorn-iscsi-nfs-install
+        - name: yum
+          hostPath:
+            path: /etc/yum.repos.d
+
+
+
+
