--- a/daemonset.yaml
+++ b/daemonset.yaml
@@ -28,7 +28,7 @@ spec:
             name: yum
       containers:
       - name: sleep
-        image: k8s.gcr.io/pause:3.1
+        image: docker.io/rancher/pause:3.2
       volumes:
         - name: kubeconfig
           hostPath:
